<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Logic Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sat">Sa</string>
    <string name="sun">Su</string>
    <string name="mon">Mo</string>
    <string name="tue">Tu</string>
    <string name="wed">We</string>
    <string name="thr">Th</string>
    <string name="fri">Fr</string>
    <string name="repeat">Repeat</string>
    <string name="wake">Wake Up Urgency:</string>
    <string name="radioLow">Low</string>
    <string name="radioMedium">Medium</string>
    <string name="radioHigh">High</string>
    <string name="method">Alert Stop Method:</string>
    <string name="stopNormal">Normal</string>
    <string name="stopPuzzle">Puzzle</string>
    <string name="stopMath">Math</string>
    <string name="addAlarm">Add</string>
    <string name="setRingtone">Ringing Tone</string>
    <string name="note">Note:</string>
    <string name="stopAlarm">Stop Alarm</string>
    <string name="solveMath">Solve the math:</string>
    <string name="wordHunt">Word Hunt</string>
    <string name="wordPlay">Find a Word to Stop the Alarm!</string>
    <string name="insWord">Instructions:</string>
    <string name="wordIns">Find a Word of </string>
    <string name="wordIns2">letters</string>
    <string name="wordIns3">You can pick a word in order of:</string>
    <string name="wordIns4">..Left to Right</string>
    <string name="wordIns5">..Right to Left</string>
    <string name="wordIns6">..Top to Bottom</string>
    <string name="wordIns7">..Bottom to Top</string>
    <string name="wordIns8">..Diagonally</string>
    <string name="simStopIns">When lock stops for half of second, grab and slide toward D</string>

</resources>
